@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v26.1.4-cur, done by sprscc13@mrn0b0dy.
--;-;-;2026-01-04 17:45:35, took 00:21:27, with 50 workers, on 4206 cases, 0 failed, 0 traces, 4 retries
+-;-;-;2026-01-04 18:20:12, took 00:17:35, with 50 workers, on 4208 cases, 0 failed, 0 traces, 10 retries
 -;-;-;./rtr.bin, null
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
@@ -284,6 +284,8 @@ http://sources.freertr.org/cfg/conn-icmp02.tst;conn-icmp02.tst;success;icmptunne
 http://sources.freertr.org/cfg/conn-icmp03.tst;conn-icmp03.tst;success;icmptunnel over icmptunnel
 http://sources.freertr.org/cfg/conn-icmp04.tst;conn-icmp04.tst;success;icmptunnel over loopback
 http://sources.freertr.org/cfg/conn-infini.tst;conn-infini.tst;success;infini encapsulation
+http://sources.freertr.org/cfg/conn-iou01.tst;conn-iou01.tst;success;iou ethernet demultiplexer
+http://sources.freertr.org/cfg/conn-iou02.tst;conn-iou02.tst;success;iou serial demultiplexer
 http://sources.freertr.org/cfg/conn-ipcomp01.tst;conn-ipcomp01.tst;success;ipcomp over ipv4
 http://sources.freertr.org/cfg/conn-ipcomp02.tst;conn-ipcomp02.tst;success;ipcomp over ipv6
 http://sources.freertr.org/cfg/conn-ipcomp03.tst;conn-ipcomp03.tst;success;ipcomp over ipcomp
