@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v26.1.4-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2026-01-04 17:45:35, took 00:21:27, with 50 workers, on 4206 cases, 0 failed, 0 traces, 4 retries<br/>
+tested: 2026-01-04 18:20:12, took 00:17:35, with 50 workers, on 4208 cases, 0 failed, 0 traces, 10 retries<br/>
 jvm: ./rtr.bin, other: null<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -296,6 +296,8 @@ jvm: ./rtr.bin, other: null<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-icmp03.tst">conn-icmp03.tst</a></td><td>success</td><td>icmptunnel over icmptunnel</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-icmp04.tst">conn-icmp04.tst</a></td><td>success</td><td>icmptunnel over loopback</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-infini.tst">conn-infini.tst</a></td><td>success</td><td>infini encapsulation</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-iou01.tst">conn-iou01.tst</a></td><td>success</td><td>iou ethernet demultiplexer</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-iou02.tst">conn-iou02.tst</a></td><td>success</td><td>iou serial demultiplexer</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-ipcomp01.tst">conn-ipcomp01.tst</a></td><td>success</td><td>ipcomp over ipv4</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-ipcomp02.tst">conn-ipcomp02.tst</a></td><td>success</td><td>ipcomp over ipv6</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-ipcomp03.tst">conn-ipcomp03.tst</a></td><td>success</td><td>ipcomp over ipcomp</td></tr>
