@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v26.1.4-cur, done by sprscc13@mrn0b0dy.
--;-;-;2026-01-04 17:59:36, took 00:13:32, with 50 workers, on 857 cases, 0 failed, 0 traces, 0 retries
+-;-;-;2026-01-04 18:33:14, took 00:12:33, with 50 workers, on 857 cases, 0 failed, 0 traces, 0 retries
 -;-;-;./rtr.bin, udp
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
