@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v26.1.4-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2026-01-04 17:59:36, took 00:13:32, with 50 workers, on 857 cases, 0 failed, 0 traces, 0 retries<br/>
+tested: 2026-01-04 18:33:14, took 00:12:33, with 50 workers, on 857 cases, 0 failed, 0 traces, 0 retries<br/>
 jvm: ./rtr.bin, other: udp<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
